added methods and minor change in folder structure